src/components/Jumbotron/jumbotron.scss
@import "../../styles/variables";


@mixin centerer {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.buttoncontainer {
    margin-top: 50px;
    .homepagebutton {
        display: inline-block;
        margin: 15px 15px 15px 15px;
        padding: 15px;
        background-color: $melon;
        color: white;
        border-radius: 10px;
        text-decoration: none !important;
        transition: transform .2s cubic-bezier(.175,.885,.32,1.275);
        &:hover {
            transform: scale(1.1);
        }
    }
}

#header {
    position: relative;
    min-height: $header-min-height;
    background-color: $licorice;
    .header-image{
        background-color: $licorice;
        height: $header-height;
        z-index: -2;
        overflow: hidden;
        img{
            filter: blur(2px) brightness(0.9);
            min-width: 100%;
            min-height: 100%;
            max-height: 100%;
            width: 100vw;
            object-fit: cover;
            z-index: 1;

        }
    }

    .header-home{
        background-color: $licorice;
        z-index: -2;
        min-width: 100%;
        min-height: 100%;
        max-height: 100%;
        height: 100vh;
        width: 100vw;
        overflow:hidden;
        width: 100%;



        img{
            filter: blur(2px) brightness(0.9);
            min-width: 100%;
            min-height: 40%;
            max-height: 40%;
            width: 100vw;
            object-fit: cover;
            z-index: 1;
        }

        video {
          filter: blur(5px) brightness(0.5);
          top: 0;
          left: 0;
          min-width: 100%;
          min-height: 100%;
          max-height: 100%;
          width: 100vw;
          object-fit: fill;
        }
    }
}

#header:after {
    content  : "";
    position : absolute;
    z-index  : 1;
    bottom   : 0;
    left     : 0;
    pointer-events   : none;
    background-image : linear-gradient(to bottom, 
                      rgba(0, 0, 0, 0), 
                      rgb(0, 0, 0) 90%);
    width    : 100%;
    height   : 2em;
  }

.logo-container {
    @include centerer;
    z-index: 2;
    text-align: center;
    height: 65%;
    margin-top: 5px;

    img {
        max-height:90%;
        max-width: 100%;
    }

    p{
      font-family: "Bebas Neue", "Helvetica", "Arial";
      font-weight: 300;
      font-size: 4vh;
      margin-top: 16px;
      margin-bottom: 16px;
      color: $text-color-light;
      text-align: center;
    }
}

.logo-container.fixed{
    height: 45%;
}

@media screen and (min-height: 1000px) {
    .logo-container{
        p{
            font-size: 2em;
        }
    }
}

@media screen and (max-width: 1200px) {
    .buttoncontainer {
        width: 300px;
        margin-top: -15px;
        margin-bottom: 10px;

        .homepagebutton {
            margin-bottom: 0px;
            margin-top: 10px;
        }
    }
}

